--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
 <h1>Retroalimentacion</h1>
 <p>Creo que su problematica esta muy bien aterrizada, se nota que se enfocaron en algo muy especifico para resolver. Esto hace que la solución sea relativamente simple a comparación de otros. Puedo decir con seguridad que me ha pasado este problema por lo que hace muy útil . Sin embargo  creo que no hay muchas maneras para abordar este tema, ya que es algo muy especifico. Además temo que soluciones a este problema ya se han implementado.</p>
 <p>En primer lugar considero que la problemática es buena, si me ha pasado en alguna ocación, pero por ejemplo los celulares de ahora mantienen una alarma hasta que tu la desactives, a que me refiero a que por ejemplo mi alarma ya esta preestablecida para todos los días de la semana que necesito despertarme a cierta hora y el problema de ajustarla correctamente ya se soluciono. Sólo me aseguro oque la primera vez lo haga correcto. Es cierto que hay veces en las que no me despierto eh ignoro la alarma, lo que hacen muchas personas es poner varias alarmas consecutivas, en ese aspecto creo que su proyecto si haría un cambio. El utilizar despertar tu cerebro si te garantiza que no te vuelvas a dormir eso me parece bien</p>
-<h1>- Define a problem that you want to explore:
-	People not waking up during the morning because they set their alarm on PM not on AM. 
-- Introduction to the problem (5w +1: What, Who, When, Where, Why, How)
-    - What: People set their alarm on PM not on AM and when the alarm goes off they don’t wake up completely which leads to stay sleeping 
-    - Who: Anyone that needs to wake up during the morning mainly students and workers
-    - When: Late at night probably during midnight and during the morning
-    - Where: Their house or anywhere in which people need their alarm 
-    - Why: We as humans make mistakes very often and one of the mistakes we make is setting the alarm at the wrong time. 
-    - How: Not paying attention when they set the alarm 
-- Academic Research
-	Experts say that aging may be the first cause of why people can’t wake up during the morning moreover deep sleepers come into the scene. Narcolepsy which appears in 1 of 500 the lack of oxygen they have during their sleep makes them very hard to wake up. (Edlund, 2010)
+	<h1>- Define a problem that you want to explore:</h1>
+	<p>	People not waking up during the morning because they set their alarm on PM not on AM. </p>
+	<h1>- Introduction to the problem (5w +1: What, Who, When, Where, Why, How)</h1>
+    <p>- What: People set their alarm on PM not on AM and when the alarm goes off they don’t wake up completely which leads to stay sleeping </p>
+   <p> - Who: Anyone that needs to wake up during the morning mainly students and workers</p>
+   <p> - When: Late at night probably during midnight and during the morning</p>
+   <p> - Where: Their house or anywhere in which people need their alarm </p>
+    <p>- Why: We as humans make mistakes very often and one of the mistakes we make is setting the alarm at the wrong time. </p>
+    <p>- How: Not paying attention when they set the alarm </p>
+<h1>- Academic Research</h1>
+	<p>Experts say that aging may be the first cause of why people can’t wake up during the morning moreover deep sleepers come into the scene. Narcolepsy which appears in 1 of 500 the lack of oxygen they have during their sleep makes them very hard to wake up. (Edlund, 2010)</p>
 
-Mathew J. Edlund . (2010). The Power of Rest. September 8, 2017, de Psychology Today Sitio web: https://www.psychologytoday.com/blog/the-power-rest/201010/why-cant-i-wake
+<p>Mathew J. Edlund . (2010). The Power of Rest. September 8, 2017, de Psychology Today Sitio web: https://www.psychologytoday.com/blog/the-power-rest/201010/why-cant-i-wake </p>
 
-- Benchmark: Jailbreak Tweak called “PM, Really?”
+</h1>- Benchmark: </h1>
+	<p>Jailbreak Tweak called “PM, Really?”</p>
 
-- Social Impact: Let’s say you study all night for your math exam, you are well prepared and can’t wait to get that exam and finish. You go to your bed start charging your phone and you don’t have any programmed alarms so you make a new one, you’re tired and can’t wait go to sleep and for some reason you set your alarm 6:00 PM instead of 6:00 AM. Don’t worry a miracle happens and somehow you wake up at 6:45 AM when the class is at 7:30 AM, you don’t take a shower, no breakfast and you are rushing and now you’re stressed, sadly you failed your exam due to the rush and stress you had
-  </h1>
+<h1>- Social Impact:</h1>
+	<p>Let’s say you study all night for your math exam, you are well prepared and can’t wait to get that exam and finish. You go to your bed start charging your phone and you don’t have any programmed alarms so you make a new one, you’re tired and can’t wait go to sleep and for some reason you set your alarm 6:00 PM instead of 6:00 AM. Don’t worry a miracle happens and somehow you wake up at 6:45 AM when the class is at 7:30 AM, you don’t take a shower, no breakfast and you are rushing and now you’re stressed, sadly you failed your exam due to the rush and stress you had</p>
+
   </body>
 </html>
