--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-<body>
+<body style="background-color:#FF0000;">
+
 <h1>Retroalimentacion</h1>
 <p>Creo que su problematica esta muy bien aterrizada, se nota que se enfocaron en algo muy especifico para resolver. Esto hace que la solución sea relativamente simple a comparación de otros. Puedo decir con seguridad que me ha pasado este problema por lo que hace muy útil . Sin embargo  creo que no hay muchas maneras para abordar este tema, ya que es algo muy especifico. Además temo que soluciones a este problema ya se han implementado.</p>
 <p>En primer lugar considero que la problemática es buena, si me ha pasado en alguna ocación, pero por ejemplo los celulares de ahora mantienen una alarma hasta que tu la desactives, a que me refiero a que por ejemplo mi alarma ya esta preestablecida para todos los días de la semana que necesito despertarme a cierta hora y el problema de ajustarla correctamente ya se soluciono. Sólo me aseguro oque la primera vez lo haga correcto. Es cierto que hay veces en las que no me despierto eh ignoro la alarma, lo que hacen muchas personas es poner varias alarmas consecutivas, en ese aspecto creo que su proyecto si haría un cambio. El utilizar despertar tu cerebro si te garantiza que no te vuelvas a dormir eso me parece bien</p>
