--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background-color:#FF0000;">
+<body style="background-color:#ABEBC6;">
 
 <h1>Retroalimentacion</h1>
 <p>Creo que su problematica esta muy bien aterrizada, se nota que se enfocaron en algo muy especifico para resolver. Esto hace que la solución sea relativamente simple a comparación de otros. Puedo decir con seguridad que me ha pasado este problema por lo que hace muy útil . Sin embargo  creo que no hay muchas maneras para abordar este tema, ya que es algo muy especifico. Además temo que soluciones a este problema ya se han implementado.</p>
